Atualiza index.html com novas alterações

--- a/index.html
+++ b/index.html
@@ -18,30 +18,33 @@
       <a href="https://github.com/Marcos-Nascimento96" class="botao" target="_blank"><i class="fab fa-github"></i> GitHub</a>
     </div><br>
     <nav>
-      <a href="#sobre">Sobre</a>
-      <a href="#habilidades">Habilidades</a>
-      <a href="#projetos">Projetos</a>
-      <a href="#contato">Contato</a>
+      <a href="#Sobre">Sobre</a>
+      <a href="#Habilidades">Habilidades</a>
+      <a href="#Projetos">Projetos</a>
+      <a href="#Contato">Contato</a>
     </nav>
   </header>
 
   </header>
 
   <main>
+   <section id="sobre">
     <section data-aos="fade-up">
       <h3>Sobre Mim</h3>
-      <p>Tenho 29 anos e sou estudante de Análise e Desenvolvimento de Sistemas na USCS (4º semestre). Estou em transição de carreira após experiências como fresador CNC, operador de centro de usinagem e entregador autônomo.</p>
+       <p>Tenho 29 anos e sou estudante de Análise e Desenvolvimento de Sistemas na USCS (4º semestre). Estou em transição de carreira após experiências como fresador CNC, operador de centro de usinagem e entregador autônomo.</p>
+    </section>
     </section>
 
     <section data-aos="fade-up">
       <h3>Emprego Atual</h3>
       <p>💼 Estagiário de TI no <strong>banco Itaú</strong>, atuando na área de Qualidade (QA).</p>
     </section>
-
+<section id="Habilidades"></section>
     <section data-aos="fade-up">
       <h3>Habilidades</h3>
       <ul>
         <li>✅ HTML e CSS</li>
+        <li>✅ JavaScript</li>
         <li>✅ SQL básico</li>
         <li>✅ Orientação a Objetos com Java</li>
         <li>✅ Conceitos de testes de software (QA)</li>
@@ -49,15 +52,16 @@
         <li>✅ Análise de processos e resolução de problemas</li>
       </ul>
     </section>
-
+</section>
     <section data-aos="fade-up">
-      <h3>Projetos</h3>
+      <section id="Projetos"></section>
+        <h3>Projetos</h3>
       <ul>
         <li><strong>Portfólio Pessoal:</strong> este site que você está navegando agora!</li>
         <li><strong>Em breve:</strong> projeto de testes automatizados com ferramentas de QA</li>
       </ul>
     </section>
-
+</section>
     <section data-aos="fade-up">
       <h3>Experiências Anteriores</h3>
       <ul>
@@ -65,14 +69,16 @@
         <li>🏍️ Entregador autônomo (motoboy)</li>
       </ul>
     </section>
-
-    <section data-aos="fade-up">
+</section>
+<section id="Contato"></section>    
+<section data-aos="fade-up">
       <h3>Contato</h3>
       <p><i class="fas fa-envelope"></i> <a href="mailto:msvn96@gmail.com">msvn96@gmail.com</a></p>
       <p><i class="fas fa-phone"></i> <a href="tel:+5511966628946">(11) 9.6662-8946</a></p>
     </section>
   </main>
-
+</section>
+</section>
   <footer>
     <p>© Marcos Vinicius - 2025</p>
   </footer>
