Adiciona imagem de fundo, atualiza CSS

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
   <header>
-    <h1>Marcos Vinicius</h1>
+    <h1>MARCOS VINICIUS SOUZA DO NASCIMENTO</h1>
     <h2 id="digitando"></h2>
  <div class="botao-container">
       <a href="curriculo-marcos.pdf" class="botao" download><i class="fas fa-file-download"></i> Currículo</a>
       <a href="https://www.linkedin.com/in/marcos-nascimento-12ab692b6/" class="botao" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
       <a href="https://github.com/Marcos-Nascimento96" class="botao" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-    </div><br>
+    </div>
     <nav>
       <a href="#Sobre">Sobre</a>
       <a href="#Habilidades">Habilidades</a>
@@ -25,10 +25,8 @@
     </nav>
   </header>
 
-  </header>
-
   <main>
-   <section id="sobre" data-aos="fade-up">
+   <section id="Sobre" data-aos="fade-up">
       <h3>Sobre Mim</h3>
       <p>Tenho 29 anos e sou estudante de Análise e Desenvolvimento de Sistemas na USCS (4º semestre). Estou em transição de carreira após experiências como fresador CNC, operador de centro de usinagem e entregador autônomo.</p>
     </section>
@@ -73,7 +71,6 @@
       <p><i class="fas fa-phone"></i> <a href="tel:+5511966628946">(11) 9.6662-8946</a></p>
     </section>
   </main>
-</section>
 
   <footer>
     <p>© Marcos Vinicius - 2025</p>
